# enpm702_fall2024

./: .gitignore  CMakeLists.txt  README.md
lecture4/src/: lecture4.cpp
lecture5/include/: lecture5.hpp
lecture5/src/: lecture5.cpp
lecture6/src/: lecture6.cpp
lecture7/include/: data.hpp
lecture7/src/: main.cpp
lecture8/include/driving/: driver.hpp  engine.hpp  vehicle.hpp
lecture8/src/: main.cpp  vehicle.cpp
ros702_ws/: README
ros702_ws/install/: local_setup.sh  setup.sh
ros702_ws/install/first_package/lib/first_package/: hello
ros702_ws/install/first_package/share/first_package/: local_setup.sh  package.sh  package.xml
ros702_ws/log/: latest_build
ros702_ws/src/bot_publisher/: CMakeLists.txt  package.xml
ros702_ws/src/bot_publisher/include/bot_publisher/: bot_publisher.hpp
ros702_ws/src/bot_publisher/src/: main.cpp
ros702_ws/src/first_package/: CMakeLists.txt
ros702_ws/src/first_package/include/first_package/: first_node.hpp
ros702_ws/src/first_package/src/: first_node.cpp  main.cpp
ros702_ws2/install/: local_setup.sh  setup.sh
ros702_ws2/install/bot_publisher/lib/bot_publisher/: bot_pub
ros702_ws2/install/bot_publisher/share/bot_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros702_ws2/install/bot_subscriber/share/bot_subscriber/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros702_ws2/install/enpm702_msgs/share/enpm702_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros702_ws2/install/first_package/lib/first_package/: hello
ros702_ws2/install/first_package/share/first_package/: local_setup.sh  package.sh
ros702_ws2/install/interface_demo/lib/interface_demo/: interface_demo
ros702_ws2/install/interface_demo/share/interface_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  (+3 more)
(+117 files in other folders)
